[tool.poetry]
name = "repl-nix-llmplayground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0.3"
flask-sqlalchemy = "^2.5.1"
flask-cors = "^3.0.10"
flask-jwt-extended = "^4.4.3"
openai = "^0.27.8"
anthropic = "^0.4.3"
python-dotenv = "^0.20.0"
Werkzeug = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
